# 20A202600108-LeTrungAnhQuoc-Day12

./: CODE_LAB.md  DAY12_DELIVERY_CHECKLIST.md  MISSION_ANSWERS.md  main.py  plan.md  pyproject.toml
02-docker/production/: Dockerfile  docker-compose.yml
03-cloud-deployment/render/: render.yaml
04-api-gateway/production/: cost_guard.py  test_security.py
05-scaling-reliability/develop/: app.py
06-lab-complete/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  railway.toml  requirements.txt
06-lab-complete/app/: config.py  main.py
06-lab-complete/utils/: mock_llm.py
reports/: DEPLOYMENT.md  MISSION_ANSWERS.md
