[project]
name = "day12-ha-tang-cloud-va-deployment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "jwt>=1.4.0",
    "pyjwt>=2.12.1",
    "python-dotenv==1.0.1",
    "redis>=7.4.0",
    "uvicorn[standard]==0.30.0",
]
